fixed flex wrap

--- a/src/css/DeckScreen.css
+++ b/src/css/DeckScreen.css
@@ -14,25 +14,39 @@
     border: 1px solid black;
     margin: 0 auto;
     padding: 20px 0;
+    transition: .6s;
 }
 .deckContainer{
     position: relative;
 }
 
 .deckImg{
+    transition: .8s;
     width: 300px;
     height: 200px;
+    
 }
 .deckTitle{
-
     position: absolute;
-    
-    bottom: 4px;
+    top: 4px;
     text-align: center;
     left: 0;
     right: 0;
     color: white;
+    font-size: 26px;
+    letter-spacing: 1px;
+    
+    background-color: rgba(144, 15, 15, 0.719);
 
-    background-color: rgba(191,4,4,.5);
-
+}
+@media only screen and (max-width: 768px)  {
+    .deck{
+        flex-wrap: wrap;
+        max-width: 320px;
+    }
+    .deckImg{
+        margin: 5px 0;
+        width: 280px;
+        height: 180px;
+    }
 }
